--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 powerup/.idea/workspace.xml
 powerup/.idea/workspace.xml
+powerup/.dart_tool/package_config.json
+powerup/.dart_tool/package_config.json
+powerup/.dart_tool/package_config.json
+powerup/.flutter-plugins
+powerup/.flutter-plugins-dependencies
+powerup/.idea/libraries/Dart_Packages.xml
