--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,23 @@ powerup/.dart_tool/package_config.json
 powerup/.flutter-plugins
 powerup/.flutter-plugins-dependencies
 powerup/.idea/libraries/Dart_Packages.xml
+*.xml
+.idea/workspace.xml
+powerup/.dart_tool/package_config.json
+powerup/.flutter-plugins
+powerup/.flutter-plugins-dependencies
+powerup/.idea/libraries/Dart_Packages.xml
+powerup/.idea/libraries/Dart_SDK.xml
+powerup/.idea/libraries/Flutter_Plugins.xml
+powerup/.idea/workspace.xml
+powerup/.packages
+*.json
+.idea/workspace.xml
+powerup/.dart_tool/package_config.json
+powerup/.flutter-plugins
+powerup/.flutter-plugins-dependencies
+powerup/.idea/libraries/Dart_Packages.xml
+powerup/.idea/libraries/Dart_SDK.xml
+powerup/.idea/libraries/Flutter_Plugins.xml
+powerup/.idea/workspace.xml
+powerup/.packages
