--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   mailer: any
   email_validator: '^1.0.6'
   path_provider:
+  dartdoc: ^0.40.0
+  date_time_picker: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
