--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ powerup/.idea/libraries/Dart_SDK.xml
 powerup/.idea/libraries/Flutter_Plugins.xml
 powerup/.idea/workspace.xml
 powerup/.packages
+powerup/android/local.properties
+powerup/.packages
+powerup/.idea/workspace.xml
+powerup/.idea/libraries/Flutter_Plugins.xml
+powerup/.idea/libraries/Dart_SDK.xml
+powerup/.idea/libraries/Dart_Packages.xml
+powerup/.flutter-plugins-dependencies
+powerup/.flutter-plugins
+powerup/.dart_tool/package_config.json
