--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -23,11 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
+  intl: ^0.17.0
   flutter_rating_bar: ^3.0.1+1
   provider: ^4.3.3
   sqflite:
+  crypto: ^3.0.0
+  mailer: any
+  email_validator: '^1.0.6'
   path_provider:
+  dartdoc: ^0.40.0
+  date_time_picker: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
