--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -26,12 +26,13 @@ dependencies:
   intl: ^0.16.1
   flutter_rating_bar: ^3.0.1+1
   provider: ^4.3.3
-  sqflite:
-  path_provider:
-
-
-
-
+  sqflite: ^2.0.0
+  crypto: ^3.0.0
+  mailer: any
+  email_validator: '^1.0.6'
+  path_provider: ^2.0.1
+  dartdoc: ^0.40.0
+  date_time_picker: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,7 +55,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/MainDB.db
+    - assets/background.png
+    - assets/leatherworkshop.jpg
+    - assets/powerup.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
