--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -26,11 +26,11 @@ dependencies:
   intl: ^0.17.0
   flutter_rating_bar: ^3.0.1+1
   provider: ^4.3.3
-  sqflite:
+  sqflite: ^2.0.0
   crypto: ^3.0.0
   mailer: any
   email_validator: '^1.0.6'
-  path_provider:
+  path_provider: ^2.0.1
   dartdoc: ^0.40.0
   date_time_picker: ^2.0.0
 
@@ -56,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/MainDB.db
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
