--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.0.1
   dartdoc: ^0.40.0
   date_time_picker: ^2.0.0
+  email_auth: ^0.0.1+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
