--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ powerup/.flutter-plugins-dependencies
 powerup/.flutter-plugins
 powerup/.dart_tool/package_config.json
 powerup/.idea/workspace.xml
+powerup/.dart_tool/package_config_subset
+powerup/.flutter-plugins-dependencies
