--- a/powerup/pubspec.yaml
+++ b/powerup/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  tform: ^0.9.3
+  rflutter_alert: ^2.0.2
   flutter:
     sdk: flutter
   intl: ^0.17.0
