--- a/powerup/ios/Flutter/Generated.xcconfig
+++ b/powerup/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\yixio\Github-repo\PowerUp\powerup
+FLUTTER_ROOT=C:\Users\anasm\Downloads\Applications\FlutterApp\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\anasm\Downloads\Applications\FlutterApp\singleton\powerup
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
